.archive/kubernetes/apps/networking/ingresses/ingressRoutes/vaultwarden/ingress-traefikCRD.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &name vaultwarden
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bitwarden.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
      services:
        - name: *name
          port: 80
          namespace: default
    - kind: Rule
      match: Host(`bitwarden.${SECRET_DOMAIN}`) && Path(`/notifications/hub`)
      middlewares:
        - name: headers
          namespace: networking
      services:
        - name: *name
          port: 3012
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
